HeatmapSpatialField v2